-- Almost all changes listed herein are new as of 2016. --

2016-07-23  Bob Weiner  <rsw@gnu.org>

* Makefile (hyperbole-$(HYPB_VERSION).tar): Added HY-ABOUT and HY-ANNOUNCE
    to files installed outside the tar archive for reference.

* man/hyperbole.texi (Installation): Updated to latest version.

2016-07-23  Mats Lidell  <matsl@gnu.org>

* kotl/kotl-loaddefs.el: Generated.

* Makefile (kotl/kotl-loaddefs.el): Added copyright notice for satisfying elpa
    copyright check.
  hyperbole.el: Changed to load kotl/kotl-loaddefs file.

2016-07-22  Bob Weiner  <rsw@gnu.org>

* man/hyperbole.texi: Added new @kitem and @kitemx macros to surround keyboard
    items in tables with braces.

* Makefile (version): Added HY-ANNOUNCE.
  HY-ANNOUNCE: Added release announcement.
  INSTALL:
  HY-NEWS: Small improvements.

* hui-menu.el (infodock-hyperbole-menu): Commented out InfoDock manual reference
    out until InfoDock is modernized for Emacs 25.

* man/hyperbole.texi (Implicit Buttons):
  hib-social.el (social-reference): Improved doc for this ibtype.

* man/hyperbole.texi (Implicit Buttons, Explicit Buttons): Improved clarity.
                     (Global Buttons): Explained how to use global buttons.

* Makefile (release): Added this target to generate the kotl/kotl-autoloads.el file
    within the source tree.

* hmoccur.el: Normalized header to match other Hyperbole files.

* hyperbole.el (hyperbole-koutliner group): Moved definition to ensure comes after
    hversion is loaded.

* Makefile (pkg): Updated to build kotl/kotl-autoloads.el file because the Emacs
    Lisp Package Manager (ELPA) does not yet handle generation of autoloads
    for package subdirectories.

2016-07-21  Bob Weiner  <rsw@gnu.org>

* hsettings.el: Renamed this from hsite.el to prevent Hyperbole V4 users from
    accidentally loading it manually.

* hyperbole.el (hyperbole-autoloads): If this exists and autoloads kotl-mode,