@@ -28,6 +28,7 @@
 ;;; ************************************************************************
 
 (eval-when-compile (require 'browse-url))
+(require 'hbut)
 
 ;;; ************************************************************************
 ;;; Public variables
