@@ -424,7 +424,7 @@ With optional ARG, override them iff ARG is positive."
 ;; Koutliner autoloads in the kotl/ subdirectory are generated by 'make pkg'.
 ;; This next line ensures they are loaded by hyperbole-autoloads whenever
 ;; the Hyperbole package is activated in an Emacs session.
-;;;###autoloads (load "kotl/kotl-loaddefs")
+;;;###autoload (load "kotl/kotl-loaddefs" nil 'nowarn)
 
 ;; Before the 6.0.1 release, Hyperbole used to patch the package-generate-autoloads 
 ;; function to ensure that kotl/ subdirectories were autoloaded.  This
